修复了AES解密bug，完成了验证码登录和自动创建账号的功能
